# PIP-Link

./: .gitignore  AIR_UNIT_SERVER_GUIDE.md  BACKEND_SUMMARY.md  IMPLEMENTATION_PLAN.md  LICENSE  QUICK_REFERENCE.md  README.md  TESTING_GUIDE.md  USER_GUIDE.md  air_unit_server.py  config.json  config.py  imgui.ini  main.py  requirements.txt
.claude/: settings.local.json
core/: __init__.py  app.py  command.py  recorder.py
docs/: air_unit_architecture.md  ground_unit_architecture.md  remote_link_design.md
logic/: __init__.py  audit_logger.py  config_manager.py  input_mapper.py  latency_calculator.py  param_manager.py  status_monitor.py  test_latency_calculator.py
network/: __init__.py  control_sender.py  fec.py  h264_decoder.py  h264_encoder.py  heartbeat.py  keyboard_encoder.py  protocol.py  service_discovery.py  session.py  test_protocol.py  video_process.py  video_receiver.py
packaging/: PIP-Link.spec  installer.iss  version_info.txt
src/remote_link/: CMakeLists.txt  package.xml
src/remote_link/include/remote_link/: control_receiver.hpp  frame_encoder.hpp  mdns_service.hpp  protocol_codec.hpp  remote_link_node.hpp  video_sender.hpp
src/remote_link/src/: control_receiver.cpp  frame_encoder.cpp  mdns_service.cpp  protocol_codec.cpp  remote_link_node.cpp  video_sender.cpp
src/test_frame_publisher/: CMakeLists.txt  package.xml
src/test_frame_publisher/include/test_frame_publisher/: test_frame_generator.hpp  test_frame_publisher_node.hpp
src/test_frame_publisher/src/: test_frame_generator.cpp  test_frame_publisher_node.cpp
tests/: AIR_UNIT_SIMULATOR_GUIDE.md  README.md  air_unit_simulator.py  run_test.py  test_borderless.py  test_borderless_full.py  test_borderless_imgui.py  test_borderless_pynput.py  test_dpi_fullscreen.py  test_dpi_info.py  test_fullscreen.py
ui/: __init__.py  console.py  imgui_ui.py  input_handler.py  renderer.py  theme.py
